// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Language Tour — Type Constructors > maybe type 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = closure_12;
  return v0;
}

function closure_12(a) {
  const v0 = "Unit";
  const v1 = {
    just: a,
    nothing: v0
  };
  return v1;
}
return main();
",
    "elaborated": "λ(a: Type) -> Variant [ just: a, nothing: Unit ]",
    "gram": "[1] root
  :entry -> [2]
[2] lambda {"variable":"a","icit":"Explicit","level":0}
  :annotation -> [3]
  :body -> [4]
  :env -> [11]
[3] lit {"value":{"type":"Atom","value":"Type"}}
[4] app {"icit":"Explicit"}
  :arg -> [6]
  :func -> [5]
[5] lit {"value":{"type":"Atom","value":"Variant"}}
[6] row:ext {"label":"just"}
  :rest -> [8]
  :value -> [7]
[7] var:bound {"index":0}
  :refers_to -> [2]
  :scope -> [2] {"level":0}
[8] row:ext {"label":"nothing"}
  :rest -> [10]
  :value -> [9]
[9] lit {"value":{"type":"Atom","value":"Unit"}}
[10] row:empty
[11] env
[12] closure
  :body -> [2]
  :env -> [11]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_12
      return v0
  fn closure_12(a) entry=entry
    entry:
      let v0 = Unit
      let v1 = alloc { just: a, nothing: v0 }
      return v1",
    "name": "Maybe",
    "normalized": "λ(a: Type) -> (closure: Variant [ just: a, nothing: Unit ] -| Γ: a)",
    "type": "Π(t1: Type) -> Type",
  },
  {
    "codegenJS": "function main() {
  const v0 = 42;
  const v1 = {
    just: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ just: 42 ]",
    "gram": "[1] root
  :entry -> [2]
[2] app {"icit":"Explicit"}
  :arg -> [4]
  :func -> [3]
[3] lit {"value":{"type":"Atom","value":"Struct"}}
[4] row:ext {"label":"just"}
  :rest -> [6]
  :value -> [5]
[5] lit {"value":{"type":"Num","value":42}}
[6] row:empty",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 42
      let v1 = alloc { just: v0 }
      return v1",
    "name": "maybeNum",
    "normalized": "Struct [ just: 42 ]",
    "type": "Variant [ just: Num, nothing: Unit ]",
  },
  {
    "codegenJS": "function main() {
  const v0 = null;
  const v1 = {
    nothing: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ nothing: unit ]",
    "gram": "[1] root
  :entry -> [2]
[2] app {"icit":"Explicit"}
  :arg -> [4]
  :func -> [3]
[3] lit {"value":{"type":"Atom","value":"Struct"}}
[4] row:ext {"label":"nothing"}
  :rest -> [6]
  :value -> [5]
[5] lit {"value":{"type":"unit"}}
[6] row:empty",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = unit
      let v1 = alloc { nothing: v0 }
      return v1",
    "name": "maybeStr",
    "normalized": "Struct [ nothing: unit ]",
    "type": "Variant [ just: String, nothing: Unit ]",
  },
]
`;

exports[`Language Tour — Type Constructors > recursive types — List 1`] = `
[
  {
    "codegenJS": "function main() {
  return v0;
}
return main();
",
    "elaborated": "List",
    "gram": "[1] root
  :entry -> [2]
[2] mu {"variable":"x","source":"List","level":0}
  :annotation -> [3]
  :body -> [6]
[3] pi {"variable":"t1","icit":"Explicit","level":0}
  :annotation -> [4]
  :body -> [5]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lit {"value":{"type":"Atom","value":"Type"}}
[6] lambda {"variable":"a","icit":"Explicit","level":1}
  :annotation -> [7]
  :body -> [8]
  :env -> [23]
[7] lit {"value":{"type":"Atom","value":"Type"}}
[8] app {"icit":"Explicit"}
  :arg -> [10]
  :func -> [9]
[9] lit {"value":{"type":"Atom","value":"Variant"}}
[10] row:ext {"label":"cons"}
  :rest -> [20]
  :value -> [11]
[11] app {"icit":"Explicit"}
  :arg -> [13]
  :func -> [12]
[12] lit {"value":{"type":"Atom","value":"Schema"}}
[13] row:ext {"label":"1"}
  :rest -> [17]
  :value -> [14]
[14] app {"icit":"Explicit"}
  :arg -> [16]
  :func -> [15]
[15] var:bound {"index":1}
  :refers_to -> [2]
  :scope -> [2] {"level":0}
  :scope -> [6] {"level":1}
[16] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [6] {"level":1}
[17] row:ext {"label":"0"}
  :rest -> [19]
  :value -> [18]
[18] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [6] {"level":1}
[19] row:empty
[20] row:ext {"label":"nil"}
  :rest -> [22]
  :value -> [21]
[21] lit {"value":{"type":"Atom","value":"Unit"}}
[22] row:empty
[23] env
  :capture -> [2] {"index":0}
[24] closure
  :body -> [6]
  :env -> [23]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      return v0",
    "name": "List",
    "normalized": "List",
    "type": "Π(t1: Type) -> Type",
  },
  {
    "codegenJS": "function main() {
  const v0 = null;
  const v1 = {
    nil: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ nil: unit ]",
    "gram": "[1] root
  :entry -> [2]
[2] app {"icit":"Explicit"}
  :arg -> [4]
  :func -> [3]
[3] lit {"value":{"type":"Atom","value":"Struct"}}
[4] row:ext {"label":"nil"}
  :rest -> [6]
  :value -> [5]
[5] lit {"value":{"type":"unit"}}
[6] row:empty",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = unit
      let v1 = alloc { nil: v0 }
      return v1",
    "name": "empty",
    "normalized": "Struct [ nil: unit ]",
    "type": "(List) Num",
  },
  {
    "codegenJS": "function main() {
  const v0 = 1;
  const v1 = null;
  const v2 = {
    nil: v1
  };
  const v3 = {
    0: v0,
    1: v2
  };
  const v4 = {
    cons: v3
  };
  return v4;
}
return main();
",
    "elaborated": "Struct [ cons: Struct [ 0: 1, 1: Struct [ nil: unit ] ] ]",
    "gram": "[1] root
  :entry -> [2]
[2] app {"icit":"Explicit"}
  :arg -> [4]
  :func -> [3]
[3] lit {"value":{"type":"Atom","value":"Struct"}}
[4] row:ext {"label":"cons"}
  :rest -> [16]
  :value -> [5]
[5] app {"icit":"Explicit"}
  :arg -> [7]
  :func -> [6]
[6] lit {"value":{"type":"Atom","value":"Struct"}}
[7] row:ext {"label":"0"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Num","value":1}}
[9] row:ext {"label":"1"}
  :rest -> [15]
  :value -> [10]
[10] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [11]
[11] lit {"value":{"type":"Atom","value":"Struct"}}
[12] row:ext {"label":"nil"}
  :rest -> [14]
  :value -> [13]
[13] lit {"value":{"type":"unit"}}
[14] row:empty
[15] row:empty
[16] row:empty",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 1
      let v1 = unit
      let v2 = alloc { nil: v1 }
      let v3 = alloc { 0: v0, 1: v2 }
      let v4 = alloc { cons: v3 }
      return v4",
    "name": "listOf1",
    "normalized": "Struct [ cons: Struct [ 0: 1, 1: Struct [ nil: unit ] ] ]",
    "type": "(List) Num",
  },
  {
    "codegenJS": "function main() {
  const v0 = 1;
  const v1 = 2;
  const v2 = 3;
  const v3 = null;
  const v4 = {
    nil: v3
  };
  const v5 = {
    0: v2,
    1: v4
  };
  const v6 = {
    cons: v5
  };
  const v7 = {
    0: v1,
    1: v6
  };
  const v8 = {
    cons: v7
  };
  const v9 = {
    0: v0,
    1: v8
  };
  const v10 = {
    cons: v9
  };
  return v10;
}
return main();
",
    "elaborated": "Struct
  [ cons: Struct
      [ 0: 1,
        1: Struct
          [ cons: Struct
              [ 0: 2,
                1: Struct
                  [ cons: Struct [ 0: 3, 1: Struct [ nil: unit ] ] ] ] ] ] ]",
    "gram": "[1] root
  :entry -> [2]
[2] app {"icit":"Explicit"}
  :arg -> [4]
  :func -> [3]
[3] lit {"value":{"type":"Atom","value":"Struct"}}
[4] row:ext {"label":"cons"}
  :rest -> [36]
  :value -> [5]
[5] app {"icit":"Explicit"}
  :arg -> [7]
  :func -> [6]
[6] lit {"value":{"type":"Atom","value":"Struct"}}
[7] row:ext {"label":"0"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Num","value":1}}
[9] row:ext {"label":"1"}
  :rest -> [35]
  :value -> [10]
[10] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [11]
[11] lit {"value":{"type":"Atom","value":"Struct"}}
[12] row:ext {"label":"cons"}
  :rest -> [34]
  :value -> [13]
[13] app {"icit":"Explicit"}
  :arg -> [15]
  :func -> [14]
[14] lit {"value":{"type":"Atom","value":"Struct"}}
[15] row:ext {"label":"0"}
  :rest -> [17]
  :value -> [16]
[16] lit {"value":{"type":"Num","value":2}}
[17] row:ext {"label":"1"}
  :rest -> [33]
  :value -> [18]
[18] app {"icit":"Explicit"}
  :arg -> [20]
  :func -> [19]
[19] lit {"value":{"type":"Atom","value":"Struct"}}
[20] row:ext {"label":"cons"}
  :rest -> [32]
  :value -> [21]
[21] app {"icit":"Explicit"}
  :arg -> [23]
  :func -> [22]
[22] lit {"value":{"type":"Atom","value":"Struct"}}
[23] row:ext {"label":"0"}
  :rest -> [25]
  :value -> [24]
[24] lit {"value":{"type":"Num","value":3}}
[25] row:ext {"label":"1"}
  :rest -> [31]
  :value -> [26]
[26] app {"icit":"Explicit"}
  :arg -> [28]
  :func -> [27]
[27] lit {"value":{"type":"Atom","value":"Struct"}}
[28] row:ext {"label":"nil"}
  :rest -> [30]
  :value -> [29]
[29] lit {"value":{"type":"unit"}}
[30] row:empty
[31] row:empty
[32] row:empty
[33] row:empty
[34] row:empty
[35] row:empty
[36] row:empty",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 1
      let v1 = 2
      let v2 = 3
      let v3 = unit
      let v4 = alloc { nil: v3 }
      let v5 = alloc { 0: v2, 1: v4 }
      let v6 = alloc { cons: v5 }
      let v7 = alloc { 0: v1, 1: v6 }
      let v8 = alloc { cons: v7 }
      let v9 = alloc { 0: v0, 1: v8 }
      let v10 = alloc { cons: v9 }
      return v10",
    "name": "listOf3",
    "normalized": "Struct
  [ cons: Struct
      [ 0: 1,
        1: Struct
          [ cons: Struct
              [ 0: 2,
                1: Struct
                  [ cons: Struct [ 0: 3, 1: Struct [ nil: unit ] ] ] ] ] ] ]",
    "type": "(List) Num",
  },
]
`;

exports[`Language Tour — Type Constructors > recursive types — Peano 1`] = `
[
  {
    "codegenJS": "function main() {
  return v0;
}
return main();
",
    "elaborated": "Peano",
    "gram": "[1] root
  :entry -> [2]
[2] mu {"variable":"x","source":"Peano","level":0}
  :annotation -> [3]
  :body -> [4]
[3] lit {"value":{"type":"Atom","value":"Type"}}
[4] app {"icit":"Explicit"}
  :arg -> [6]
  :func -> [5]
[5] lit {"value":{"type":"Atom","value":"Variant"}}
[6] row:ext {"label":"succ"}
  :rest -> [8]
  :value -> [7]
[7] var:bound {"index":0}
  :refers_to -> [2]
  :scope -> [2] {"level":0}
[8] row:ext {"label":"zero"}
  :rest -> [10]
  :value -> [9]
[9] lit {"value":{"type":"Atom","value":"Unit"}}
[10] row:empty",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      return v0",
    "name": "Peano",
    "normalized": "Peano",
    "type": "Type",
  },
  {
    "codegenJS": "function main() {
  const v0 = null;
  const v1 = {
    zero: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ zero: unit ]",
    "gram": "[1] root
  :entry -> [2]
[2] app {"icit":"Explicit"}
  :arg -> [4]
  :func -> [3]
[3] lit {"value":{"type":"Atom","value":"Struct"}}
[4] row:ext {"label":"zero"}
  :rest -> [6]
  :value -> [5]
[5] lit {"value":{"type":"unit"}}
[6] row:empty",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = unit
      let v1 = alloc { zero: v0 }
      return v1",
    "name": "zero",
    "normalized": "Struct [ zero: unit ]",
    "type": "Peano",
  },
  {
    "codegenJS": "function main() {
  const v0 = unknown;
  const v1 = {
    succ: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ succ: zero ]",
    "gram": "[1] root
  :entry -> [2]
[2] app {"icit":"Explicit"}
  :arg -> [4]
  :func -> [3]
[3] lit {"value":{"type":"Atom","value":"Struct"}}
[4] row:ext {"label":"succ"}
  :rest -> [7]
  :value -> [6]
[5] var:free {"name":"zero"}
[6] var:ref {"name":"zero"}
  :refers_to -> [5]
[7] row:empty",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = unknown
      let v1 = alloc { succ: v0 }
      return v1",
    "name": "first",
    "normalized": "Struct [ succ: Struct [ zero: unit ] ]",
    "type": "Peano",
  },
  {
    "codegenJS": "function main() {
  const v0 = unknown;
  const v1 = {
    succ: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ succ: first ]",
    "gram": "[1] root
  :entry -> [2]
[2] app {"icit":"Explicit"}
  :arg -> [4]
  :func -> [3]
[3] lit {"value":{"type":"Atom","value":"Struct"}}
[4] row:ext {"label":"succ"}
  :rest -> [7]
  :value -> [6]
[5] var:free {"name":"first"}
[6] var:ref {"name":"first"}
  :refers_to -> [5]
[7] row:empty",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = unknown
      let v1 = alloc { succ: v0 }
      return v1",
    "name": "second",
    "normalized": "Struct [ succ: Struct [ succ: Struct [ zero: unit ] ] ]",
    "type": "Peano",
  },
]
`;
